# NoMoreLaunchers

./: CLAUDE.md  LICENSE  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/card/: card-description.svelte  card-title.svelte  card.svelte
src/lib/services/: launcher-detection.ts  steam-integration.ts  tauri-launcher-detection.ts
src/routes/: +page.svelte
