[package]
name = "no-more-launchers"
version = "0.1.0"
description = "Import games from multiple launchers into Steam"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-message", "dialog-confirm", "shell-open", "process-relaunch", "os-all", "dialog-ask", "process-exit", "path-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"
walkdir = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
